# hello-world-ut-cmake

./: CMakeLists.txt  HomeForm.ui.qml  README.md  main.qml
packaging/ubuntu_touch/: clickable.json  hw.desktop  manifest.json
